--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,7 @@
     <li>Watching Sports</li>
   </ol>
   <hr size="2" noshade>
-  <a href="home.html">Homepage</a>
+  <a href="index.html">Homepage</a>
   <a href="contact.html">Contact Me</a>
 
 </body>
