--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
 <hr size="2" noshade>
 
-<a href="home.html">Homepage</a>
+<a href="index.html">Homepage</a>
 <a href="hobbies.html">Hobbies</a>
 
 </html>
