--- a/index.html
+++ b/index.html
@@ -1,70 +1,87 @@
+  
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Robert Colgan</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Merriweather:wght@300;400;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <title>Robert's Personal Site</title>
+</head>
 
 <body>
+  <table cellspacing="20">
+    <tr>
+      <td><img height="125" src="photos/self photo.jpg" alt="Robert Profile Picture"></td>
+      <td>
+        <h1>Robert Colgan</h1>
+        <p><em>Junior Web Developer</em></p>
+        <p>I am a Junior Web Developer currently learning HTML coding to create a personal website.</p>
+      </td>
+    </tr>
+  </table>
 
-  <div class="top">
-    <img z-index="3" class="cloud1" src="images/cloud1.png" alt="cloud-image">
-    <h1 class="heading">I'm Robert Colgan</h1>
-    <h2 class="second-heading">a junior web developer</h2>
-    <img class="cloud2" src="images/cloud2.png" alt="cloud-image">
-    <img class="mountain" src="images/mountain2.png" alt="mountain-image">
-  </div>
-  <div class="middle">
-    <div class="profile">
-      <img class="self" src="images/self photo.jpg" alt="profile-image">
-      <p class="grad">High School Graduation 2018</p>
-      <h2 class="hello">Hello.</h2>
-      <p class="intro">I am a junior Web Developer currently learning HTML, CSS, and Javascript with others coming soon!</p>
-    </div>
-    <hr height="3px">
-    <div class="skills">
-      <h2 class="my-skills">My Skills.</h2>
-      <div class="skill-row1">
-        <img class="design-img" src="images/design.png" alt="design-icon">
-        <h3>Design & Development</h3>
-        <p class="skill-text">Over four years of Digital Design experience working with programs such as photoshop and illustrator. Basic knowledge of Web Development using HTML and CSS.</p>
-      </div>
-      <br>
-      <div class="skill-row2">
-        <img class="social-img" src="images/social.png" alt="social-media-icons">
-        <h3>Social Media</h3>
-        <p class="skill-text">A solid understanding of social media, the importance of community, and how to engage people using different platforms.</p>
-        <br><br><br>
-      </div>
-    </div>
+  <hr size="2" noshade>
+  <h3>Education</h3>
+  <ul>
+    <li><strong><a href="https://schs.irsd.net/">Sussex Central High School (2014-2018)</strong></a></li>
+    <li><strong><a href="https://www.wvu.edu/">West Virginia University (2018-2019)</strong></a></li>
+  </ul>
+  <hr>
 
+  <h3>Work Experience</h3>
+  <table border="1">
+    <thead>
+      <th>Dates</th>
+      <th>Work</th>
+      <th>Teacher</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2014-2018</td>
+        <td>Coding Courses at Sussex Central High School</td>
+        <td>Robert Gibson</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td>The Complete Web Development Bootcamp</td>
+        <td>Angela Yu</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
 
-  </div>
+  <h3>Skills</h3>
+  <table border="1">
+    <tbody>
+      <tr>
+        <td>
+          <table>
+            <tr>
+              <td>Problem Solving</td>
+              <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>Photography</td>
+              <td>⭐⭐</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table>
+            <tr>
+              <td>Digital Design</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <td>HTML Programming</td>
+            <td>⭐(in progress)</td>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-
-  <div class="bottom">
-    <hr>
-    <div class="contact-me">
-
-      <h2 class="contact-heading">Want to get in touch?</h2>
-      <p class="contact-p">Reach out using any of the platforms below to contact me!</p>
-
-    </div>
-    <hr>
-    <a class="btn" href="mailto:colganrobert1@gmail.com">E-Mail</a><br>
-    <a class="footer-link1" href="https://www.instagram.com/robert.colgan/">Instagram</a>
-    <img class="logo" width="20px" src="images/insta.png" alt="twitter-logo">
-    <a class="footer-link2" href="https://twitter.com/Rcolga001">Twitter</a>
-    <img class="logo" width="20px" src="images/twitter.png" alt="twitter-logo">
-    <a class="footer-link3" href="https://www.linkedin.com/in/robert-colgan-651175208/">Linkedin</a>
-    <img class="logo" width="20px" src="images/linkedin.png" alt="linkedin-logo">
-    <p class="contact-p">© 2021 Robert Colgan.</p>
-  </div>
-
+  <hr size="2" noshade>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="contact.html">Contact Me</a>
 </body>
 
 </html>
